@@ -16,6 +16,7 @@ Unknown: Wild Texas (Firepower II Modification)
 
 Clones:
 Bram Stoker's Dracula L-2C (competition MOD)
+Creature from the Black Lagoon L-5C (competition MOD)
 Dr. Dude LA-3C (competition MOD)
 Hook 4.01p (4.01 with Prototype Sound)
 Inder Centaur (alternate version)
